[Feature]MC-15 - overflow fixed
Fixed the overflow problem and a few adjusts to organize css (lefting only the import font-awesome problem)

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,19 +1,3 @@
-// GoogleFonts variables import
-@font-face {
-    font-family: 'Noto Sans', sans-serif;
-    src: url('../fonts/noto-sans/NotoSans-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'Biryani', sans-serif;
-    src: url('../fonts/biyrani/Biryani-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'IM Fell English', serif;
-    src: url('../fonts/im-fell-english/IMFellEnglish-Regular.ttf');
-}
-
 // Fonts variables
 $title-text: 'Noto Sans', sans-serif;
 $general-text: 'Biryani', sans-serif;
