--- a/src/assets/scss/home-layout.scss
+++ b/src/assets/scss/home-layout.scss
@@ -1,8 +1,10 @@
 $nav-padding: 10px;
 
+/* 
 .home {
-    overflow: hidden;
+   overflow: hidden;
 }
+*/
 
 .home-background {
     background-color: #f9f9f9;
